# edge-apt

./: .gitattributes  .gitignore  .gitmodules  README.md  edgeapt.toml  lock.json
cloudflare/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc  wrangler.test.jsonc
keys/: test_edgeapt_archive_keyring.gpg
sources/: argc.yaml  bat.yaml  chezmoi.yaml  difftastic-musl.yaml  difftastic.yaml  doggo.yaml  eza.yaml  fd.yaml  fzf.yaml  helix.yaml  hello.yaml  jellyfin-ffmpeg7.yaml  jless.yaml  lf.yaml  mihomo-amd64-v3.yaml  (+17 more)
tools/: pyproject.toml
tools/src/edgeapt/: __init__.py  chunked_assets.py  cli.py  config.py  constants.py  deb.py  e2e.py  errors.py  fetch.py  install_page.py  keyring.py  lockfile.py  models.py  package_manifest.py  planner.py  project.py  repackage.py  repo.py  sources.py  ubuntu_index.py  upstream_updates.py  util.py
tools/src/edgeapt/domain/: __init__.py  artifacts.py  keys.py  lock.py  planning.py
tools/src/edgeapt/infrastructure/: __init__.py  aptly.py  archive.py  cloudflare.py  deb.py  fetcher.py  lock_store.py  source_loader.py  ubuntu_index.py
tools/src/edgeapt/templates/: __init__.py  base.py  common.py  deb_upstream_v1.py  prebuilt_archive_v1.py  registry.py  single_binary.py  single_binary_v1.py  single_binary_v1_1.py
tools/src/edgeapt/web/: index.html
tools/src/edgeapt/web/assets/: VENDOR.md  explorer.css  explorer.js
tools/src/edgeapt/workflows/: __init__.py  generate.py  planning.py  repackage.py  scope.py  validate.py
tools/tests/: factories.py  test_archive.py  test_chunked_assets.py  test_cli.py  test_cloudflare.py  test_config.py  test_deb.py  test_e2e.py  test_fetch.py  test_integration_fixture.py  test_keyring.py  test_lockfile.py  test_package_manifest.py  test_planner.py  test_prebuilt_archive.py  test_prune_packages.py  test_repackage_cache.py  test_repackage_modes.py  test_repo_generation.py  test_scope.py  test_single_binary.py  test_sources.py  test_templates.py  test_ubuntu_index.py  test_upstream_updates.py  test_workflows.py
(+17 files in other folders)
