[project]
name = "edgeapt"
version = "0.1.0"
description = "Local tooling for the EdgeAPT private APT repository"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "cyclopts>=3.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
]

[project.scripts]
edgeapt = "edgeapt.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires local external tools or network",
    "e2e: requires docker and a generated local repository",
]
