[project]
name = "edgeapt"
version = "0.1.0"
description = "Local tooling for the EdgeAPT private APT repository"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "cyclopts>=3.0.0",
    "pydantic>=2",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
]

[project.scripts]
guide = "edgeapt.cli:guide_main"
refresh-ubuntu-index = "edgeapt.cli:refresh_ubuntu_index_main"
validate = "edgeapt.cli:validate_main"
plan-digest = "edgeapt.cli:plan_digest_main"
init-test-key = "edgeapt.cli:init_test_key_main"
check-key = "edgeapt.cli:check_key_main"
repackage = "edgeapt.cli:repackage_main"
generate = "edgeapt.cli:generate_main"
e2e = "edgeapt.cli:e2e_main"
deploy = "edgeapt.cli:deploy_main"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration and not e2e'"
markers = [
    "integration: requires local external tools or network",
    "e2e: requires docker and a generated local repository",
]
